Crea archivo js de la tarea
Modifica el html para que incluya el js de la tares

--- a/clase-5-tarea-4.html
+++ b/clase-5-tarea-4.html
@@ -29,6 +29,6 @@
         <span>tarea clase 5 <em>Javier Gigena</em></span>
     </footer>
 
-    <script src=""></script>
+    <script src="clase-5-tarea-4.js"></script>
 </body>
 </html>
