--- a/clase-5-tarea-4.html
+++ b/clase-5-tarea-4.html
@@ -12,8 +12,14 @@
         <h2>Cuarta parte</h2>
 
         <form>
-            <textarea disabled name="textarea" rows="8" cols="80">
-
+            <textarea disabled name="textarea" rows="11" cols="80">
+//TAREA: En otro archivo distinto,
+// Crear una lista de <ol> y <li> que contengan sólo números.
+// Convertir esos números a un array y:
+// 1. calcular el promedio y mostrarlo en un <em> pre-creado con el texto "El promedio es..."
+// 2. obtener el número más pequeño y mostrarlo en un <em> pre-creado con el texto "El número más pequeño es..."
+// 3. obtener el número más grande y mostrarlo en un <em> pre-creado con el texto "El número más grande es..."
+// 4. obtener el número que más se repite y mostrarlo en un <em> pre-creado con el texto "El número más frecuente es..."                
             </textarea>
         <br>
     </header>
