Crea lista y textos
Con estos cambios queda terminada la parte de HTML

--- a/clase-5-tarea-4.html
+++ b/clase-5-tarea-4.html
@@ -25,6 +25,41 @@
     </header>
 
     <main>
+        <h3>Horas de los videos de r/Argentina Programa</h3>
+        <ol>
+            <li>2</li>
+            <li>1</li>
+            <li>0</li>
+            <li>2</li>
+            <li>2</li>
+            <li>1</li>
+            <li>1</li>
+            <li>2</li>
+            <li>0</li>
+            <li>1</li>
+            <li>1</li>
+            <li>2</li>
+            <li>1</li>
+            <li>2</li>
+            <li>2</li>
+            <li>1</li>
+            <li>1</li>
+            <li>0</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>2</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+        </ol>
+        <div>
+            <p><em id="promedio">"El promedio es..."</em></p>
+            <p><em id="numeroMasChico">"El número más pequeño es..."</em></p>
+            <p><em id="numeroMasGrande">"El número más grande es..."</em></p>
+            <p><em id="numeroMasFrecuente">"El número más frecuente es..."</em></p>
+        </div>
+        
     </main>
        
     <footer>
