--- a/clase-5-tarea-1.html
+++ b/clase-5-tarea-1.html
@@ -6,7 +6,16 @@
     <title>Clase 5 tarea 1</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <form>
+            <textarea disabled name="consigna" rows="6" cols="50">
+TAREA: crear un formulario donde un usuario pueda ingresar su salario anual.
+cuando el usuario haga click en el botón "calcular", mostrar el salario mensual
+en una caja de texto deshabilitada. --> <input type="text" disabled id="salario-mensual"/>
+            </textarea>
+        </form>
+    </header>
+    <br>
     <main>
         <form> <label>Ingrese su salario anual</label>
             <input type="number" id="salarioAnual" placeholder="Ingresar salario anual"/>
